--- a/.github/workflows/dynamic-analysis.yml
+++ b/.github/workflows/dynamic-analysis.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      # probably need to checkout master too
       - uses: actions/checkout@v2
         with:
-          ref: master
-
-      - uses: actions/checkout@v2
-        with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
+
+      - name: Fetch master too
+        run: |
+          git fetch --no-tags --prune origin master
 
       - name: Setup JDK 11
         uses: actions/setup-java@v1
