--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,18 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.9.RELEASE'
   id 'java'
 
-  id "org.sonarqube" version "2.8"
-
   // expand variables defined in dotenv
   id "co.uzzu.dotenv.gradle" version "1.1.0"
+
+  id "org.sonarqube" version "2.8"
+  // FIXME checkstyle not working
+  // id 'checkstyle'
+  id 'jacoco'
 }
 
 group = 'tech.gruppone.stalker'
 version = '0.5.0'
 sourceCompatibility = '11'
-
-tasks.withType(JavaCompile) {
-  options.encoding = 'UTF-8'
-  options.compilerArgs = [
-    '-Xlint:all',
-    '-Xlint:-processing',
-    '-Werror'
-  ]
-}
 
 configurations {
   developmentOnly
@@ -90,7 +84,38 @@ test {
   useJUnitPlatform()
 }
 
-// configure sonarcloud analysis
+processResources {
+  filesMatching('application.properties') {
+    expand(project.properties)
+  }
+}
+
+ext {
+  mysqlRootPassword = "${env.MYSQL_ROOT_PASSWORD.orElse("password")}"
+  influxdbAdminPassword = "${env.INFLUXDB_ADMIN_PASSWORD.orElse("password")}"
+}
+
+tasks.withType(JavaCompile) {
+  options.encoding = 'UTF-8'
+  options.compilerArgs = [
+    '-Xlint:all',
+    '-Xlint:-processing',
+    '-Werror'
+  ]
+}
+
+// TODO add checkstyle plugin configuration
+
+jacocoTestCoverageVerification {
+  violationRules {
+    rule {
+      limit {
+        minimum = 0.8
+      }
+    }
+  }
+}
+
 sonarqube {
   properties {
     property "sonar.projectKey", "GruppOne_stalker-server"
