--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,30 @@
+# TODO convert to yaml!!
+# TODO override this properties file while testing. ref: https://www.baeldung.com/spring-tests-override-properties
 # ===============================
 # = GENERAL PROPERTIES
 # ===============================
 server.port=11111
 spring.application.name=Stalker server
-# TODO add to bumpfiles or expand from gradle
-spring.application.version=0.5.0
+spring.application.version=${version}
 
 
 # ===============================
 # = RELATIONAL DATABASE
 # ===============================
+# TODO test if this works
+# spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.username=root
-# FIXME spring.r2dbc.password should be defined in local.properties
-# this password has to be the same as the one defined in the root .env file
-spring.r2dbc.password=devpassword
+spring.r2dbc.password=${mysqlRootPassword}
 
 
 # ===============================
 # = TIME-SERIES DATABASE
 # ===============================
-influxdb.url=http://localhost:8086
-# Probably unneeded; the db and retention policy creation should be delegated to docker
-influxdb.database=stalker-tsdb
-influxdb.user=root
-# FIXME influxdb.password should be defined in local.properties
-# this password has to be the same as the one defined in the root .env file
-influxdb.password=devpassword
+spring.influx.url=http://localhost:8086
+spring.influx.database=stalker-tsdb
+spring.influx.user=root
+spring.influx.password=${influxdbAdminPassword}
 
 
 # ===============================
