--- a/.github/workflows/dynamic-analysis.yml
+++ b/.github/workflows/dynamic-analysis.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   sonarcloud-pr-scanner:
-    name: Scan pr with SonarCloud
+    name: Scan PR with SonarCloud
     runs-on: ubuntu-18.04
 
     if: github.event_name == 'pull_request'
