--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,14 +1,24 @@
-# name: Static code analysis
+name: Static analysis
 
-# on:
-#   pull_request:
-#     branches:
-#       - master
+on:
+  pull_request:
+    branches:
+      - master
 
-# jobs:
-#   lint:
-#     name: Lint Java code
-#     runs-on: ubuntu-18.04
+jobs:
+  lint:
+    name: Lint Java code
+    runs-on: ubuntu-18.04
 
-#     steps:
-#       - uses: actions/checkout@v2
+    steps:
+      # - uses: actions/checkout@v2
+
+      # - name: Setup JDK 11
+      #   uses: actions/setup-java@v1
+      #   with:
+      #     java-version: 11
+
+      # - name: Setup Gradle wrapper
+      #   run: ./gradlew --console=plain --warning-mode=all --info
+
+      - run: echo "nothing here (yet)"
