feat: add authentication without authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,5 +46,5 @@ spring.main.banner-mode=off
 
 # spring security
 springsecurity.jwt.secret=T3VyU2VjdXJlU2VjcmV0TG9uZ0tleUZvclN0YWxrZXJKV1R0b2tlbnM=
-springsecurity.jwt.expirationtime=2800
+springsecurity.jwt.expirationtime=3000000000
 
