--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -6,8 +6,26 @@ on:
       - master
 
 jobs:
+  build:
+    name: Lint with JVM -Xlint:all
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Setup Gradle wrapper
+        run: ./gradlew --console=plain --warning-mode=all --info
+
+      - name: Compile Java classes and test classes
+        run: ./gradlew --console=plain --warning-mode=all --info classes testClasses
+
   lint:
-    name: Lint Java code
+    name: Lint with Checkstyle
     runs-on: ubuntu-18.04
 
     steps:
