--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
 
 //  influxdb 1.7 java client
   implementation 'org.influxdb:influxdb-java:2.17'
+
+// Serialize and deserialize data type in json
+  compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4")
 }
 
 test {
