--- a/.github/workflows/project-management.yml
+++ b/.github/workflows/project-management.yml
@@ -8,9 +8,9 @@ on:
     types:
       - opened
 
-  push:
-    branches-ignore:
-      - master
+  # push:
+  #   branches-ignore:
+  #     - master
 
 env:
   MY_GITHUB_TOKEN: ${{ secrets.ERCLU_ORGANIZATION_TOKEN }}
@@ -55,7 +55,7 @@ jobs:
     name: Assign to our main project board
     runs-on: ubuntu-18.04
 
-    if: github.event_name != 'push'
+    # if: github.event_name != 'push'
 
     steps:
       - name: Assign new issues and new PRs to the main organization project board
@@ -69,7 +69,7 @@ jobs:
     name: Assign a requirement to our main project board
     runs-on: ubuntu-18.04
 
-    if: github.event_name != 'push'
+    # if: github.event_name != 'push'
 
     steps:
       - name: Assign new requirement to the correct project column
