--- a/.github/workflows/dynamic-analysis.yml
+++ b/.github/workflows/dynamic-analysis.yml
@@ -6,6 +6,31 @@ on:
       - master
 
 jobs:
+  minimum-coverage:
+    name: Unit tests passing and coverage > 80%
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+
+      - name: Fetch master too
+        run: |
+          git fetch --no-tags --prune origin master
+
+      - name: Setup JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Setup Gradle wrapper
+        run: ./gradlew --console=plain --warning-mode=all --info
+
+      - name: Run gradle check
+        run: ./gradlew --console=plain --warning-mode=all --info --continue jacocoTestCoverageVerification
+
   test:
     name: Run gradle check
     runs-on: ubuntu-18.04
@@ -28,11 +53,12 @@ jobs:
       - name: Setup Gradle wrapper
         run: ./gradlew --console=plain --warning-mode=all --info
 
-      - name: Run gradle check (with minimum coverage at 80%)
+      - name: Run gradle check
         run: ./gradlew --console=plain --warning-mode=all --info --continue check
 
       - name: Upload results to SonarCloud
         if: always()
+        # exclude dependent tasks that were already executed during "Run gradle check" step
         run: |
           ./gradlew \
             --console=plain \
@@ -40,6 +66,7 @@ jobs:
             --info \
             --continue \
             sonarqube \
+            -x test \
             -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN }} \
             -Dsonar.pullrequest.key=${{ github.event.number }} \
             -Dsonar.pullrequest.branch=${{ github.head_ref }}
