feat: add connections endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # ===============================
 server.port=11111
 spring.application.name=Stalker server
-spring.application.version=${version}
+spring.application.version=0.5
 
 
 # ===============================
@@ -15,16 +15,16 @@ spring.application.version=${version}
 # spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.username=root
-spring.r2dbc.password=${mysqlRootPassword}
+spring.r2dbc.password=GruppOne.stalker-server.RDB
 
 
-# ===============================
-# = TIME-SERIES DATABASE
-# ===============================
-spring.influx.url=http://localhost:8086
-spring.influx.database=stalker-tsdb
-spring.influx.user=root
-spring.influx.password=${influxdbAdminPassword}
+ ===============================
+ = TIME-SERIES DATABASE
+ ===============================
+ spring.influx.url=http://localhost:8086
+ spring.influx.database=stalker-tsdb
+ spring.influx.user=root
+ spring.influx.password=GruppOne.stalker-server.TSDB
 
 
 # ===============================
