--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,20 @@ spring.r2dbc.password=GruppOne.stalker-server.RDB
 # ===============================
 spring.main.banner-mode=off
 # spring.main.lazy-initialization=true
+
+
+# ===============================
+# = GMAIL SMTP SERVER
+# ===============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gruppone.swe@gmail.com
+spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
