--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,37 +15,25 @@ spring.application.version=0.5
 # spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
 spring.r2dbc.username=root
-spring.r2dbc.password=GruppOne.stalker-server.RDB
-
-
- ===============================
- = TIME-SERIES DATABASE
- ===============================
- spring.influx.url=http://localhost:8086
- spring.influx.database=stalker-tsdb
- spring.influx.user=root
- spring.influx.password=GruppOne.stalker-server.TSDB
+spring.r2dbc.password=${mysqlRootPassword}
 
 
 # ===============================
-# = SECURITY
+# = TIME-SERIES DATABASE
 # ===============================
-# TODO write necessary configuration here
-
-# ===============================
-# = OTHER
-# ===============================
-spring.main.banner-mode=off
-# spring.main.lazy-initialization=true
+spring.influx.url=http://localhost:8086
+spring.influx.database=stalker-tsdb
+spring.influx.user=root
+spring.influx.password=${influxdbAdminPassword}
 
 
 # ===============================
-# = GMAIL SMTP SERVER
+# = JAVA MAIL SENDER
 # ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=gruppone.swe@gmail.com
-spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.password=${emailAccountPassword}
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
@@ -54,3 +42,14 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 
+# ===============================
+# = SECURITY
+# ===============================
+# TODO write necessary configuration here
+
+
+# ===============================
+# = OTHER
+# ===============================
+spring.main.banner-mode=off
+# spring.main.lazy-initialization=true
