--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,8 @@ MYSQL_ROOT_PASSWORD=example-root-password
 # InfluxDB
 INFLUXDB_ADMIN_PASSWORD=example-admin-password
 
+# Email account used to send password recovery emails
+EMAIL_ACCOUNT_PASSWORD=example-gmail-password
+
 # SonarCloud login token
 SONARCLOUD_LOGIN=example-login-token
