--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # ===============================
 server.port=11111
 spring.application.name=Stalker server
-spring.application.version=0.5
+spring.application.version=${version}
 
 
 # ===============================
@@ -46,7 +46,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # = SECURITY
 # ===============================
 # TODO write necessary configuration here
-
 
 # ===============================
 # = OTHER
