build(docker): add tsdb retention policy and fix chronograf

--- a/db/time-series/Dockerfile
+++ b/db/time-series/Dockerfile
@@ -1,8 +1,10 @@
 
-FROM influxdb:1.7
+FROM influxdb:1.8-alpine
 
 LABEL maintainer="gruppone.swe@gmail.com"
 
 COPY ./influxdb.conf /etc/influxdb/influxdb.conf
+
+COPY ./create.iql /docker-entrypoint-initdb.d/
 
 EXPOSE 8086
