--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.influx.url=http://localhost:8086
 spring.influx.database=stalker-tsdb
 spring.influx.user=root
 spring.influx.password=${influxdbAdminPassword}
+spring.influx.measurement=access_log
 
 
 # ===============================
