--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
     restart: always
 
     environment:
+      # TODO is this needed?
       # TODO we probably should not create the db here
       INFLUXDB_DB: stalker-tsdb
       INFLUXDB_ADMIN_USER: root
@@ -65,6 +66,21 @@ services:
       - type: volume
         source: tsdb-data
         target: /var/lib/influxdb/data
+
+  # FIXME not working
+  # api-docs:
+  #     image: swaggerapi/swagger-ui
+  #     ports:
+  #         - 8083:8080
+  #     environment:
+  #         URL: api/openapi.yaml
+  #     volumes:
+  #       - type: bind
+  #         source: ./api
+  #         target: /usr/share/nginx/html/api
+  #       - type: bind
+  #         source: ./api
+  #         target: /api
 
 volumes:
   rdb-data:
