feat: add correctly configured influxdb bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ logging.level.org.springframework.data.r2dbc=DEBUG
 # ===============================
 spring.influx.url=http://localhost:8086
 spring.influx.database=stalker-tsdb
+spring.influx.retention=stalker-tsdb-retention-policy
 spring.influx.user=root
 spring.influx.password=${influxdbAdminPassword}
 spring.influx.measurement=access_log
