feat: start authorization

--- a/db/time-series/influxdb.conf
+++ b/db/time-series/influxdb.conf
@@ -316,7 +316,7 @@ bind-address = "127.0.0.1:8088"
   # The default chunk size for result sets that should be chunked.
   # max-row-limit = 0
 
-  # The maximum number of HTTP connections that may be open at once.  New connections that
+  # The maximum number of HTTP connection that may be open at once.  New connection that
   # would exceed this limit are dropped.  Setting this value to 0 disables the limit.
   # max-connection-limit = 0
 
@@ -378,7 +378,7 @@ bind-address = "127.0.0.1:8088"
   # The default timeout for HTTP writes to subscribers.
   # http-timeout = "30s"
 
-  # Allows insecure HTTPS connections to subscribers.  This is useful when testing with self-
+  # Allows insecure HTTPS connection to subscribers.  This is useful when testing with self-
   # signed certificates.
   # insecure-skip-verify = false
 
