--- a/api/model/DecodedJwtPayload.v1.yaml
+++ b/api/model/DecodedJwtPayload.v1.yaml
@@ -1,10 +1,8 @@
-title: Decoded JWT Payload
 type: object
+title: Decoded JWT Payload
+description: sub contains the user id.
+additionalProperties: false
 properties:
-  organizations:
-    type: array
-    items:
-      $ref: ./OrganizationRole.v1.yaml
   sub:
     $ref: ./GenericId.v1.yaml
   iat:
@@ -12,11 +10,25 @@ properties:
     format: int64
     minimum: 0
     exclusiveMinimum: false
+    description: Issued at Time
   exp:
     type: integer
     format: int64
     minimum: 0
     exclusiveMinimum: false
+    description: Expiry time (UNIX timestamp)
+  jti:
+    type: integer
+    format: int64
+    minimum: 0
+    description: Case sensitive unique identifier of the token even among different issuers. Generated randomly.
 required:
-  - organizations
-description: 'sub contains the user Id, exp and iat are UNIX timestamps in seconds.'
+  - sub
+  - iat
+  - exp
+  - jti
+example:
+    sub: 1
+    iat: 1516239022
+    exp: 1893456000
+    jti: 42
