feat: simplify roles management in api contract

--- a/api/model/UserRole.v1.yaml
+++ b/api/model/UserRole.v1.yaml
@@ -1,10 +1,10 @@
-title: User Roles in a specific organization
+title: User Role in all organizations
 type: object
 properties:
-  userId:
+  organizationId:
     $ref: ./GenericId.v1.yaml
   role:
     $ref: ./AdministratorType.v1.yaml
 required:
-  - userId
+  - organizationId
   - role
