--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "GabrielBB.vscode-lombok",
     "pivotal.vscode-spring-boot",
     "redhat.java",
+    "richardwillis.vscode-spotless-gradle",
     "shengchen.vscode-checkstyle",
     "sonarsource.sonarlint-vscode",
     "vscjava.vscode-java-debug",
