--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,12 @@ logging.level.org.springframework.data.r2dbc=DEBUG
 # ===============================
 # = TIME-SERIES DATABASE
 # ===============================
-spring.influx.url=http://localhost:8086
-spring.influx.database=stalker-tsdb
-spring.influx.retention=stalker-tsdb-retention-policy
-spring.influx.user=root
-spring.influx.password=${influxdbAdminPassword}
-spring.influx.measurement=access_log
+# cannot user spring.influx properties because they trigger an autoconfiguration class.
+influxdb.url=http://localhost:8086
+influxdb.database=stalker-tsdb
+influxdb.retention=stalker-tsdb-retention-policy
+influxdb.user=root
+influxdb.password=${influxdbAdminPassword}
 
 
 # ===============================
