--- a/api/model/MultiLocationInfo.v1.yaml
+++ b/api/model/MultiLocationInfo.v1.yaml
@@ -1,4 +1,4 @@
-title: LocationInfo
+title: Multiple Location Info
 description: "Specifics of a user's current location relative to the places monitored by organizations they're subscribed to."
 type: object
 properties:
