refactor: use conventions for naming

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
   "coverage-gutters.manualCoverageFilePaths": [
-    "build/reports/jacoco/test/jacocoTestReport.xml"
+    "${workspaceFolder}/build/reports/jacoco/test/jacocoTestReport.xml"
   ],
   "java.format.enabled": true,
   "java.format.onType.enabled": true,
