--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ jacocoTestReport {
   reports {
     xml.enabled true
     csv.enabled false
-    html.enabled false
+    html.enabled true
   }
 
   dependsOn {
