--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -6,6 +6,24 @@ on:
       - master
 
 jobs:
+  check-format:
+    name: Check formatting
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Setup Gradle wrapper
+        run: ./gradlew --console=plain --warning-mode=all --info
+
+      - name: Run gradle spotlessCheck
+        run: ./gradlew spotlessCheck --info
+
   build:
     name: Lint with JVM -Xlint:all
     runs-on: ubuntu-18.04
