--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ plugins {
   // expand variables defined in dotenv
   id "co.uzzu.dotenv.gradle" version "1.1.0"
 
-  id "org.sonarqube" version "2.8"
+  id "com.diffplug.gradle.spotless" version "3.30.0"
   // FIXME checkstyle not working
   // id 'checkstyle'
   id 'jacoco'
+
+  id "org.sonarqube" version "2.8"
 }
 
 group = 'tech.gruppone.stalker'
@@ -69,15 +71,15 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
-//  Provides a platform neutral way for running an LDAP server in unit tests.
+  // Provides a platform neutral way for running an LDAP server in unit tests.
   testImplementation 'com.unboundid:unboundid-ldapsdk'
 
   testImplementation 'io.projectreactor:reactor-test'
   // testImplementation 'org.springframework.security:spring-security-test'
 
-//  ---------------------------------------------------------------------------------
+  // ---------------------------------------------------------------------------------
 
-//  influxdb 1.7 java client
+  // influxdb 1.x java client
   implementation 'org.influxdb:influxdb-java:2.17'
 }
 
@@ -100,6 +102,32 @@ ext {
   influxdbAdminPassword = "${env.INFLUXDB_ADMIN_PASSWORD.orElse("password")}"
 }
 
+// ===============================
+// = FORMATTING
+// ===============================
+
+spotless {
+  java {
+    target '**/*.java'
+
+    googleJavaFormat()
+
+    endWithNewline()
+    // already set by googleJavaFormat()
+    // indentWithSpaces(2)
+    paddedCell()
+    removeUnusedImports()
+    trimTrailingWhitespace()
+  }
+
+  encoding 'UTF-8'
+  lineEndings("UNIX")
+}
+
+// ===============================
+// = LINTERS
+// ===============================
+
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
   options.compilerArgs = [
@@ -110,6 +138,10 @@ tasks.withType(JavaCompile) {
 }
 
 // TODO add checkstyle plugin configuration
+
+// ===============================
+// = TESTING AND COVERAGE
+// ===============================
 
 jacocoTestReport {
   reports {
@@ -137,12 +169,16 @@ jacocoTestCoverageVerification {
   }
 }
 
-// TODO check if sonarcloud still fails on min coverage without this
 // check {
 //   dependsOn {
 //     jacocoTestCoverageVerification
 //   }
 // }
+
+// ===============================
+// = SONARCLOUD
+// ===============================
+
 
 sonarqube {
   properties {
