--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,9 +23,6 @@
   "git.fetchOnPull": false,
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
-  "coverage-gutters.manualCoverageFilePaths": [
-    "${workspaceFolder}/build/reports/jacoco/test/jacocoTestReport.xml"
-  ],
   "java.format.enabled": true,
   "java.format.onType.enabled": true,
   "java.format.comments.enabled": true,
@@ -62,5 +59,6 @@
     "plaintext",
     "yaml"
   ],
-  "xml.format.enabled": false
+  "xml.format.enabled": false,
+  "coverage-gutters.coverageReportFileName": "jacoco/**/index.html"
 }
