perf: let the database autofill createdDate and move test to subpackage

--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,9 @@ ext {
 // ===============================
 
 spotless {
+  // already enforced with a different method
+  enforceCheck false
+
   java {
     target '**/*.java'
 
